--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "yapf",
+    "cSpell.words": [
+        "backtest",
+        "btbox",
+        "dropna",
+        "ffill",
+        "iloc",
+        "ohlcv",
+        "vwap"
+    ]
 }
